force-app/main/default/objects/Agent_Distribution_History__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Call_List__c</referenceTo>
    <relationshipLabel>Agent Distribution History</relationshipLabel>
    <relationshipName>Agent_Distribution_History</relationshipName>
    <type>Lookup</type>
</CustomField>