force-app/main/default/objects/Agent_Distribution_History__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <formula>Campaign__r.Campaign_Name__c</formula>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>