force-app/main/default/objects/Agent_Distribution_History__c/fields/Is_Qualtrics__c.field-meta.xml
<CustomField>
    <fullName>Is_Qualtrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Qualtrics</label>
    <type>Checkbox</type>
</CustomField>