force-app/main/default/objects/Agent_Distribution_History__c/fields/Re_Calculate__c.field-meta.xml
<CustomField>
    <fullName>Re_Calculate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Calculate</label>
    <type>Checkbox</type>
</CustomField>