force-app/main/default/objects/Agent_Distribution_History__c/fields/Total_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Total_Distributed__c</fullName>
    <label>Total Distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>