force-app/main/default/objects/Agent_Distribution_History__c/fields/User_Detail__c.field-meta.xml
<CustomField>
    <fullName>User_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Detail</label>
    <referenceTo>User_Detail__c</referenceTo>
    <relationshipLabel>Agent Distribution History</relationshipLabel>
    <relationshipName>Agent_Distribution_History</relationshipName>
    <type>Lookup</type>
</CustomField>